<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sembago</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="sembago_string">SEMBAGO</string>
    <string name="fresh__fast__convenient__your_ultimate_grocery_companion__string">Fresh, Fast, Convenient: Your Ultimate Grocery Companion!</string>
    <string name="sign_up">Sign Up</string>
    <string name="buat_akun_s">Buat akun Sembago mu sekarang!</string>
    <string name="sign_in">Sign In</string>
    <string name="belanja_mud">Belanja mudah, dan murah melalui\nsembago app</string>
    <string name="email">Email</string>
    <string name="masukan_ala">Masukan alamat email</string>
    <string name="password">Password</string>
    <string name="masukan_kat">Masukan kata sandi</string>
    <string name="login_melal">Login melalui Google</string>
    <string name="log_in">Log In</string>
    <string name="belum_punya">Belum punya akun? Sign Up</string>
    <string name="des_sembago">Fresh, Fast, Convenient: Your Ultimate Grocery Companion!</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_code">Enter Code</string>
    <string name="cek_emailmu">Cek Emailmu, kode verifikasi telah dikirim\nmelalui email</string>
    <string name="tunggu_30s">Tunggu 30s</string>
    <string name="tidak_mener">Tidak menerima kode? kirim ulang</string>
    <string name="nama">Nama</string>
    <string name="confirmpass">Konfirmasi password</string>
    <string name="masuk">Masuk</string>
    <string name="sudah_punya">Sudah punya akun? sign In</string>
    <string name="aman_halal">AMAN\n&amp;\nHALAL</string>
    <string name="fresh_fast_">Fresh, Fast, Convenient: Your Ultimate Grocery\nCompanion!</string>
    <string name="halal">HALAL</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="wishlist">Wishlist</string>
    <string name="log_fail_string">Login failed. Please try again or adjust your email or password.</string>
    <string name="email_invalid_string">Email is not correct</string>
    <string name="pass_invalid_string">Password is not correct</string>
    <string name="pass_valid_string">The password is correct</string>
</resources>